--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@ button {
   cursor:pointer; 
 }
 
+.controls {
+  margin-top: 2.5rem; /* 動画の下に余白を大きくしてボタンを下げる */
+}
+
 /* サムネイル */
 .thumbnail-container { 
   display:flex; 
