--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>YouTubeプレイヤー</title>
+<title>Youtubeプレイヤー</title>
 <script src="https://www.youtube.com/iframe_api"></script>
 <style>
 body, html {
@@ -28,6 +28,7 @@ body, html {
   width: 90vw;
   max-width: 600px;
   padding-top: 56.25%; /* 16:9比率 */
+  margin: 0 auto;       /* 親コンテナ内で中央寄せ */
 }
 #player {
   position: absolute;
@@ -35,6 +36,7 @@ body, html {
   left: 0;
   width: 100%;
   height: 100%;
+  display: block;       /* 幅100%確実に適用 */
 }
 
 /* タイトル表示（逆順） */
@@ -122,8 +124,8 @@ button:hover {
   </div>
 
   <div class="controls">
-    <button id="prevBtn">⏮ 前へ</button>
-    <button id="nextBtn">⏭ 次へ</button>
+    <button id="prevBtn"> ⏮ </button>
+    <button id="nextBtn"> ⏭ </button>
   </div>
 
   <div class="playlist-list" id="playlistList"></div>
