--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@ button:hover {
 .playlist-selector {
   margin-top: 1.5rem;
   text-align: center;
+  color: white; /* ラベル文字色 */
+  font-size: 1rem;
+}
+.playlist-selector label {
+  margin-right: 0.5rem;
 }
 .playlist-selector select {
   padding: 0.5rem;
@@ -143,8 +148,9 @@ button:hover {
 
   <!-- プレイリスト切替セレクター -->
   <div class="playlist-selector">
-    <select id="playlistSelect"></select>
-  </div>
+  　<label for="playlistSelect">プレイリスト切替：</label>
+  　<select id="playlistSelect"></select>
+　</div>
 
   <!-- プレイリストリスト -->
   <div class="playlist-list" id="playlistList"></div>
